k8s/modami/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modami
  labels:
    app.kubernetes.io/name: modami
